chart/templates/application/auth-service/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-app-service
  labels:
    app: auth-app
spec:
  selector:
      app: auth-app
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  type: ClusterIP
